[package]
name = "core_bluetooth"
version = "0.1.0"
authors = ["Dmytro Lysai <d@emphased.net>"]
description = "Safe API wrapper for Core Bluetooth framework"
keywords = ["api", "bluetooth", "macos", "ios"]
categories = ["api-bindings", "os::macos-apis"]
repository = "https://github.com/pingw33n/rust_core_bluetooth"
documentation = "https://docs.rs/core_bluetooth"
readme = "README.md"
edition = "2018"
license = "MIT/Apache-2.0"

[features]
async_std_unstable = ["async-std"]

[dependencies]
async-std = { version = "1.5.0", features = ["unstable"], optional = true }
enumflags2 = "0.6"
lazy_static = "1.4.0"
log = "0.4.8"
objc = "0.2.7"
static_assertions = "1.1.0"

[dev-dependencies]
anyhow = "1.0.28"
chrono = "0.4.11"
clap = "3.0.0-beta.1"
env_logger = "0.7.1"
hex = "0.4.2"
hex-literal = "0.2.1"
macaddr = "1.0.1"
openssl-sys = "0.9.55"